--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>Get 5 points to win the game</h1>
+    </header>
+    <section>
+        <button id="btn">rock</button>
+        <button id="btn">paper</button>
+        <button id="btn">scissors</button>
+
+    </section>
+    <div id="result"></div>
+
+    
     <script src="main.js"></script>
 </body>
 </html>
